[metadata]
description-file = README.md

[isort]
honor_noqa = True
profile = black
line_length = 88
lines_between_sections = 1
lines_between_types = 1
order_by_type = true
known_future_library = future,pies
extra_standard_library = typing,typing_extensions,mock,pytest,factory,faker,flaky,numpy,pandas,requests,websocket,jinja2,yaml,pytz
known_third_party = rest_framework,scipy,sklearn,datadog,docker,corsheaders,celery,picklefield,sentry_sdk,orjson,pydantic,clipped
known_first_party = polyaxon,traceml,hypertune,tests
indent = '    '
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
known_django = django
default_section = FIRSTPARTY
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
addopts = --doctest-glob='*.rst'
pythonpath = .
markers =
    artifacts_mark
    events_mark
    endpoints_mark
    notifies_mark
    run_mark
    projects_resources_mark
    projects_mark
    restrictions_mark
    search_mark
    versions_mark
    lineages_mark
    bookmarks_mark
    proxies_mark
    streams_mark
    serializers_mark
    schemas_mark
    managers_mark
    background_mark

[mypy]
python_version = 3.9
namespace_packages = true
ignore_missing_imports = True
show_error_codes = True
allow_redefinition = True
exclude = (setup.py$)|(tests/)|(vendor/)
