[metadata]
description = file: README.md

[tool:pytest]
addopts = --doctest-glob='*.rst'
pythonpath = .
markers =
    artifacts_mark
    events_mark
    endpoints_mark
    notifies_mark
    run_mark
    projects_resources_mark
    projects_mark
    policies_mark
    search_mark
    versions_mark
    lineages_mark
    bookmarks_mark
    proxies_mark
    streams_mark
    serializers_mark
    schemas_mark
    managers_mark
    background_mark

[mypy]
python_version = 3.9
namespace_packages = true
ignore_missing_imports = True
show_error_codes = True
allow_redefinition = True
exclude = (setup.py$)|(tests/)|(vendor/)
